[package]
edition = "2018"
name = "serum_dex_0_4_0"
version = "0.4.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]
description = "Serum DEX"
license = "Apache-2.0"
repository = "https://github.com/project-serum/serum-dex"

[profile.release]
lto = true

[profile.test]
opt-level = 2

[lib]
crate-type = [ "cdylib", "lib" ]

[dependencies.arbitrary]
version = "0.4.6"
features = [ "derive" ]
optional = true

[dependencies.arrayref]
version = "0.3.6"

[dependencies.bincode]
version = "1.3.1"

[dependencies.bytemuck]
version = "1.4.0"

[dependencies.byteorder]
version = "1.3.4"

[dependencies.enumflags2]
version = "0.6.4"

[dependencies.field-offset]
version = "0.3.4"

[dependencies.itertools]
version = "0.9.0"

[dependencies.num-traits]
version = "0.2.12"

[dependencies.num_enum]
version = "0.5.0"

[dependencies.safe-transmute]
version = "0.11.0"

[dependencies.serde]
version = "1.0.114"

[dependencies.static_assertions]
version = "1.1.0"

[dependencies.thiserror]
version = "1.0.20"

[dependencies.without-alloc]
version = "0.2.1"

[dependencies.safecoin-program]
path = "../Safecoin/sdk/program"

[dependencies.safe-token]
features = [ "no-entrypoint" ]
path = "../safecoin-program-library/token/program"

[dev-dependencies.bumpalo]
version = "3.4.0"
features = [ "collections" ]

[dev-dependencies.hexdump]
version = "0.1.0"

[dev-dependencies.proptest]
version = "0.10.0"

[dev-dependencies.proptest-derive]
version = "0.2.0"

[dev-dependencies.rand]
version = "0.7.3"

[features]
client = [ ]
default = [ "program" ]
fuzz = [ "arbitrary" ]
no-entrypoint = [ ]
program = [ ]
test = [ ]
